# scrob

./: .editorconfig.license  .env  .gitignore  .rustfmt.toml  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  IDEAS.md  IDEAS.txt  LICENSE  Makefile  README.md  flake.nix  rust-toolchain.toml  scrob.nix
.github/: dependabot.yml
.github/workflows/: ci-debug-builds.yml  ci.yml  dependency-review.yml  greetings.yml  rust.yml
.reuse/: dep5
clients/cli/: Cargo.toml
core/daemon/: Cargo.toml
core/daemon/src/: lib.rs
core/lib/db/: Cargo.toml
core/lib/db/sql/: up.sql
core/lib/db/src/: schema.rs
core/lib/dyn/: Cargo.toml
core/lib/rpc/: Cargo.toml
core/lib/sources/: Cargo.toml
core/lib/sources/src/: common.rs  mpris.rs
core/lib/sources/src/mpd/: mod.rs  utils.rs
core/lib/targets/: Cargo.toml
docs/: NOTES.md
docs/diagrams/: Makefile
docs/diagrams/main_event_loop/: Makefile  main_event_loop.dot
docs/markdown/: IDEAS.md
lib/db/: .env  Cargo.toml  up.sql
lib/db/migrations/2019-10-03-070444_create_artists/: down.sql  up.sql
lib/db/src/: lib.rs  schema.rs
lib/dyn/: Cargo.toml
lib/rpc/: Cargo.toml
lib/scrob-client/: Cargo.toml
lib/scrob-common/: Cargo.toml
lib/scrob-server/: Cargo.toml
lib/sources/: Cargo.toml
lib/sources/src/: lib.rs  mpris.rs
lib/sources/src/mpd/: mod.rs
lib/targets/: Cargo.toml
migrations/20170418220154_create_songs/: down.sql  up.sql
migrations/2019-10-03-070444_create_artists/: down.sql  up.sql
migrations/2019-10-03-071036_create_sources/: down.sql
migrations/2019-10-03-071038_create_songs/: down.sql
migrations/2019-10-03-071043_create_targets/: down.sql
old_src/: lib.rs
old_src/db/: mod.rs
old_src/sources/: mod.rs
script/: after_cibuild  bootstrap  cibuild
sql/: up.sql
src/: lib.rs  logging.rs  utils.rs
src/db/: conn.rs  mod.rs  models.rs
src/logging/: mod.rs
src/rpc/: mod.rs
src/sources/: common.rs  mod.rs  mpd.rs  mpris.rs
src/sources/mpd/: mod.rs  utils.rs
src/sources/mpris/: mod.rs
src/targets/: mod.rs
src/utils/: logging.rs  mod.rs
