[workspace]
members = [
  "bin/scrobctl",
  "bin/scrobd",
  "lib/scrob-client",
  "lib/scrob-common",
  "lib/scrob-server",
]
resolver = "2"

[workspace.package]
name = "scrob"
description = "Pluggable, open-source audio scrobbler, for crustaceans."
authors = ["Dom Rodriguez"]
version = "0.2.0"
rust-version = "1.67"
license = "MIT"
repository = "https://github.com/shymega/scrob"
readme = "README.md"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.24", features = ["derive"] }
config = { version = "0.13", default-features = false, features = ["toml"] }
diesel = { version = "2.1.4", features = ["sqlite"] }
dotenv = "0.15.0"
env_logger = "0.10.1"
jsonrpc = "0.16.0"
jsonrpc-core = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-tcp-server = "18.0.0"
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
log = "0.4.20"
reqwest = { version = "0.11", features = [ "json", "rustls-tls-native-roots" ], default-features = false }
serde = { version = "1.0.145, <=1.0.171", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
time = { version = "0.3", features = [ "serde-human-readable", "macros", "local-offset", ] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[profile.dev]
lto = true
opt-level = 3
codegen-units = 1
debug = true

[profile.dev.package."*"]
codegen-units = 1
opt-level = 3
debug = true

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
debug = false
