# SPDX-FileCopyrightText: 2023 Dom Rodriguez
#
# SPDX-License-Identifier: MIT

[package]
name = "scrob"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk"]
edition = "2021"
publish = false
license = "MIT"
readme = "README.md"
repository = "https://github.com/shymega/scrob"
description = "A modular scrobbler in Rust."
categories = ["scrobbler", "modular"]
keywords = ["scrobbler", "modular"]

[[bin]]
name = "scrobctl"
test = false
bench = false

[[bin]]
name = "scrobd"
test = false
bench = false

[lib]
name = "scrob"
path = "src/lib.rs"

[dependencies]
time = "0.3.34"
dotenv = "0.15.0"
jsonrpc = "0.17.0"
jsonrpc-core = "18.0.0"
jsonrpc-tcp-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
clap = "4.5.3"
env_logger = "0.11.1"
log = "0.4.21"
anyhow = "1.0.81"
thiserror = "1.0.58"
diesel = { version = "2.1.5", features = ["sqlite"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
tokio = { version = "1.36.0", features = ["full"] }

[profile.dev]
lto = true
opt-level = 3
codegen-units = 1
debug = true

[profile.dev.package."*"]
codegen-units = 1
opt-level = 3
debug = true

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
debug = false
