[package]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
description = "A modular scrobbler with various inputs/outputs."
homepage = "https://github.com/shymega/scrobblers"
license = "GPL-3.0"
name = "scrobblers"
readme = "README.md"
repository = "https://github.com/shymega/scrobblers.git"
version = "0.1.2"

[lib]
name = "scrobblers"
path = "src/lib.rs"

[dependencies]
slog = "2.5.2"
slog-async = "2.3.0"
slog-scope = "4.1.2"
slog-term = "2.4.1"
sources = { path = "../lib/sources" }
rpc = { path = "../lib/rpc" }
db = { path = "../lib/db" }
targets = { path = "../lib/targets" }

[dependencies.clippy]
version = "0.0.302"
optional = true

[dependencies.clap]
features = ["suggestions", "color", "wrap_help"]
version = "2.33.0"
