[package]
name = "db"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk"]
edition = "2018"

[dependencies]
time = "0.1.42"
slog = "2.5.2"
slog-async = "2.4.0"
slog-scope = "4.3.0"
slog-term = "2.5.0"
dotenv = "0.15.0"

[dependencies.diesel]
version = "1.4.3"
features = ["sqlite"]

[dependencies.clippy]
version = "*"
optional = true
