[package]
name = "dyn"
description = "Dynamic external modules support for Scrobblers"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk"]
edition = "2018"

[dependencies]
libloading = "0.5.2"
slog = "2.5.2"
slog-async = "2.4.0"
slog-scope = "4.3.0"
slog-term = "2.5.0"

[dependencies.clippy]
version = "0.0.302"
optional = true
