[package]
name = "rpc"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2018"

[dependencies]
jsonrpc = "0.11.0"
jsonrpc-core = "14.0.5"
jsonrpc-tcp-server = "14.0.6"
jsonrpc-ipc-server = "14.0.7"

slog = "2.5.2"
slog-async = "2.4.0"
slog-scope = "4.3.0"
slog-term = "2.5.0"

[dependencies.clippy]
version = "*"
optional = true
