[package]
name = "sources"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2018"

[dependencies]
mpris = "1.1.2"
mpd = "0.0.12"
time = "0.2.7"

slog = "2.5.2"
slog-async = "2.4.0"
slog-scope = "4.3.0"
slog-term = "2.5.0"

[dependencies.clippy]
version = "*"
optional = true
