[package]
name = "rpc"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2018"

[dependencies]
jsonrpc = "0.11.0"
jsonrpc-core = "4.0"
jsonrpc-tcp-server = "13.2"
jsonrpc-ipc-server = "13.2"
slog = "2.5.2"
slog-async = "2.3.0"
slog-scope = "4.1.2"
slog-term = "2.4.1"

[dependencies.clippy]
version = "0.0.302"
optional = true
